Closed Bug 1559259 Opened 6 years ago Closed 6 years ago

APZ doesn't set mLayersId on WidgetEvent when not using WebRender

Categories

(Core :: Panning and Zooming, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: rhunt, Assigned: rhunt)

References

Details

Attachments

(1 file)

This prevents hit testing from working when WebRender is not enabled.

Attachment #9072015 - Attachment description: Bug 1559259 - Have APZ set mLayersId on WidgetEvent when not using WebRender. r?hsivonen → Bug 1559259 - Have APZ set mLayersId on WidgetEvent when not using WebRender. r?kats
Pushed by rhunt@eqrion.net: https://hg.mozilla.org/integration/autoland/rev/b8628b1c358c Have APZ set mLayersId on WidgetEvent when not using WebRender. r=kats
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: