Bug 1559259 - Have APZ set mLayersId on WidgetEvent when not using WebRender. r=kats

Differential Revision: https://phabricator.services.mozilla.com/D34939

--HG--
extra : moz-landing-system : lando